--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body style="margin: 10%; color: rgb(26, 90, 26);">
     <h3 style="text-align: center;">Write a new Chat</h3>
-    <form style="margin: 20px; text-align: center; border: 2px solid green;">
+    <form style="margin: 20px; text-align: center; border: 2px solid green;" method="POST" action="/chats">
         <input style="margin: 10px;" placeholder="Who are you?" name="from">
         <br>
         <textarea style="margin: 10px; " name="msg">Write your Message: </textarea>
